After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695668 - phase timeout vs testing
phase timeout vs testing
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-12 01:19 UTC by Colin Walters
Modified: 2013-03-12 14:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Increase phase timeout (925 bytes, patch)
2013-03-12 01:19 UTC, Colin Walters
accepted-commit_now Details | Review
Allow configuring phase timeout (5.58 KB, patch)
2013-03-12 01:19 UTC, Colin Walters
reviewed Details | Review

Description Colin Walters 2013-03-12 01:19:24 UTC
Created attachment 238647 [details] [review]
Increase phase timeout

The current ostree.gnome.org build server ends up using nested virtualization when running qemu for testing, and this is just too slow.

Even when the build server is fixed, in theory other people could hit this, and we should try to work.  Here are two different patches (that could as a third option be combined):
Comment 1 Colin Walters 2013-03-12 01:19:45 UTC
Created attachment 238648 [details] [review]
Allow configuring phase timeout
Comment 2 Matthias Clasen 2013-03-12 10:15:10 UTC
Review of attachment 238648 [details] [review]:

::: gnome-session/gsm-manager.c
@@ +2842,3 @@
+        g_free (contents);
+}
+

I can see why having this tweakable from the kernel commandline would be convenient to you, but I must say that I find this pretty horrible...
Comment 3 Colin Walters 2013-03-12 13:24:50 UTC
(In reply to comment #2)
> Review of attachment 238648 [details] [review]:
> 
> ::: gnome-session/gsm-manager.c
> @@ +2842,3 @@
> +        g_free (contents);
> +}
> +
> 
> I can see why having this tweakable from the kernel commandline would be
> convenient to you, but I must say that I find this pretty horrible...

Yeah, I'm not a huge fan of the patch either.  That's why there's a much simpler alternative patch here too =)

But just for reference the /proc parsing came from 
https://git.gnome.org/browse/gnome-settings-daemon/tree/plugins/power/gpm-common.c#n986
Comment 4 Ray Strode [halfline] 2013-03-12 14:33:15 UTC
Review of attachment 238647 [details] [review]:

Let's go with this one for now. The problem, I guess, is no matter what time we pick it's always going to be too short somewhere.
Comment 5 Colin Walters 2013-03-12 14:45:39 UTC
(In reply to comment #4)
> Review of attachment 238647 [details] [review]:
> 
> Let's go with this one for now. The problem, I guess, is no matter what time we
> pick it's always going to be too short somewhere.

Yeah, it's at least valuable though to match systemd I think.  (I guess if we ever use systemd user sessions, that'll happen automatically).