Increase phase timeout to 90 seconds

This matches what systemd is using presently.  Also, it will hopefully
make automated testing more reliable.

https://bugzilla.gnome.org/show_bug.cgi?id=695668